--- a/index.html
+++ b/index.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>JavaScript</title>
+    <link rel = "stylesheet" href = "style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>Hello!</h2>
-    <h3>Hi!</h3>
+    <div class = "hello" id = "hello">
+        <h1>Добро пожаловать на наш сайт!</h1>
+        <p>
+            Наш сайт написать с помощью языка гипертекстовой разметки (HTML), <br>
+            таблицы каскадных стилей (CSS), а интерактивность придана с помощью <br>
+            языка программирования JavaScript.
+        </p>
+    </div>
+    <div class = "buttons">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+    </div>
+
+
+    <p class = "inform">
+      Python - мой любимый язык программирования, он удобен и легок в изучении!  
+    </p>
+    <p class = "inform">
+       Сейчас я изучаю JavaScript. Он очнь похож на Java и C++. 
+    </p>
+    <p class = "inform">
+       HTML и CSS нужны только для верстки, поэтому я не считаю их языками программирования...  
+    </p>
+
+    <div class = "images">
+        <img src = "images/python.png" alt = "Python" title = "Python">
+    </div>
+    <div class = "images">    
+        <img src = "images/JS.png" alt = "JavaScript" title = "JavaScript">
+    </div>
+    <div class = "images">    
+        <img src = "images/HTML.png" alt = "HTML" title = "HTML">
+    </div>
+    <div class = "images">    
+        <img src = "images/CSS.png" alt = "CSS" title = "CSS">
+    </div>
+
     <script src="script.js"></script>
+
 </body>
 </html>
