--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
        HTML и CSS нужны только для верстки, поэтому я не считаю их языками программирования...  
     </p>
 
-    <div class = "images">
-        <img src = "images/python.png" alt = "Python" title = "Python">
+    <div class="wrapper">
+        <div class = "images">
+            <img src = "images/python.png" alt = "Python" title = "Python">
+        </div>
+        <div class = "images">    
+            <img src = "images/JS.png" alt = "JavaScript" title = "JavaScript">
+        </div>
+        <div class = "images">    
+            <img src = "images/HTML.png" alt = "HTML" title = "HTML">
+        </div>
+        <div class = "images">    
+            <img src = "images/CSS.png" alt = "CSS" title = "CSS">
+        </div>
+    
     </div>
-    <div class = "images">    
-        <img src = "images/JS.png" alt = "JavaScript" title = "JavaScript">
-    </div>
-    <div class = "images">    
-        <img src = "images/HTML.png" alt = "HTML" title = "HTML">
-    </div>
-    <div class = "images">    
-        <img src = "images/CSS.png" alt = "CSS" title = "CSS">
-    </div>
-
+    
     <script src="script.js"></script>
 
 </body>
